2004-06-26  Remi Denis-Courmont

	* miredo.8, Makefile.am:
	- initial man page,
	* src/miredo.cpp, src/relay.cpp:
	- removed useless memory checks (the program will be killed if we run
	  out of memory anyway),
	- check that server primary IPv4 address is a global unicast one.

2004-06-25  Remi Denis-Courmont

	* src/ipv6-tunnnel.cpp:
	- compile fix for broken pre-08-2003 Kame implementations,
	- fixed support for adding/deleting tunnel addresses on FreeBSD.

2004-05-24  Remi Denis-Courmont

	* src/ipv6-tunnel.cpp:
	- support for FreeBSD tunneling driver (still a stupid compilation
	  error, routing change not implemented).

2004-05-20  Remi Denis-Courmont

	* configure.ac, src/*:
	- FreeBSD compilation fixes, except tunneling driver.
	* src/main.cpp, src/ipv6-tunnel.cpp, src/miredo.cpp:
	- removed useless option to specify tunnel device file,
	- automatically add a route to the tunnel for the Teredo prefix.

2004-05-19  Remi Denis-Courmont

	* src/main.cpp, src/miredo.cpp:
	- automatic interface addres configuration,
	- properly drop additionnal POSIX groups.

2004-05-17  Remi Denis-Courmont

	* src/miredo.cpp, src/ipv6-tunnel.cpp:
	- set Teredo interface MTU to 1280 bytes,
	- setup Teredo interface address,
	- support for changing Teredo's prefix,
	- detach in the background.

2004-05-15  Remi Denis-Courmont

	* src/main.c, src/miredo.cpp:
	- support for changing Teredo relay/client port,
	- automatic relay IPv4 address selection.

2004-05-14  Remi Denis-Courmont

	* src/main.c, configure.ac:
	- support for non-root miredo user/group,
	* src/ipv6-tunnel.cpp:
	- automatically bring tunnel interface up.

2004-05-12  Remi Denis-Courmont

	* main.c:
	- getopt-based command line handling: in particular,
	  support for disabling server and/or relay,
	* miredo.cpp, main.c:
	- split from main.cpp, partial code cleanup.

2004-05-07  Remi Denis-Courmont

	* README:
	- initial english-public version,
	- removed French internal doc.
	* doc/*: