@@ -13,7 +13,7 @@
 .\" *  along with this program; if not, you can get it from:              *
 .\" *  http://www.gnu.org/copyleft/gpl.html                               *
 .\" ***********************************************************************
-.TH "MIREDO" "8" "$Date: 2004/06/26 20:14:28 $" "miredo" "System Manager's Manual"
+.TH "MIREDO" "8" "$Date: 2004/06/27 10:25:24 $" "miredo" "System Manager's Manual"
 .SH NAME
 miredo \- Teredo IPv6 tunneling for Unix
 .SH SYNOPSIS
@@ -42,6 +42,10 @@ clients to setup their IPv6 connectivity through Teredo. A Teredo
 server must have to global static subsequent IPv4 addresses. It
 receives packets from Teredo clients and Teredo relays on UDP port
 3544.
+
+This version of the program is designed according to
+.IR "draft-huitema-v6ops-teredo-02.txt" ", although it might not be"
+entirely conformant to that version of the Teredo specification.
 
 .SH OPTIONS
 
@@ -87,6 +91,10 @@ Miredo should chroot() for increased security.
 Miredo does not queue more than one IPv6 packet per Teredo clients.
 That might break some IPv6-enabled applications.
 
+.RB "Miredo does not support " "secure qualification" "."
+I don't know any client implementation that supports it either, so it
+is not a real problem at the moment.
+
 .RB "The Internet draft specification for " "Teredo" " has not yet"
 been validated. As such it is subject to change and miredo might not
 work correctly with other implementations.
@@ -125,7 +133,7 @@ ng_teredo(4), ipv6(7), route(8), ip(8)
 .SH AUTHOR
 Remi Denis-Courmont <rdenis at simphalempin.com>
 
-$Id: miredo.8,v 1.3 2004/06/26 20:14:28 rdenisc Exp $
+$Id: miredo.8,v 1.4 2004/06/27 10:25:24 rdenisc Exp $
 
 http://www.simphalempin.com/dev/miredo/
 
