@@ -1,3 +1,8 @@
+2004-06-27  Remi Denis-Courmont
+
+	* include/teredo.c:
+	- allow unknown Teredo address flags, as specified per new draft 02.
+
 2004-06-26  Remi Denis-Courmont
 
 	* miredo.8, Makefile.am:
